--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "server:postinstall": "link-module-alias"
   },
   "ApplicationConfigurations": {
-    "port": 3333
+    "port": 3333,
+
+    "viewEngine": {
+      "beautify": true
+    }
   },
   "@name": "Sam",
   "@StartUpMessage": "My Server is running..!",
