--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "ApplicationConfigurations": {
     "port": 3333,
-
     "viewEngine": {
       "beautify": true
     }
@@ -36,9 +35,10 @@
     "sucrase": "^3.15.0"
   },
   "dependencies": {
+    "@react-ssr/core": "^0.24.0",
+    "@react-ssr/express": "^0.24.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-react-views": "^0.11.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "sequelize": "^6.3.5",
