--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "sequelize": "^6.3.5",
-    "sqlite3": "^5.0.0"
+    "sqlite3": "^5.0.0",
+    "styled-components": "^5.2.0"
   }
 }
