--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "link-module-alias": "^1.2.0",
     "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
+    "sequelize-cli": "^6.2.0",
     "sucrase": "^3.15.0"
   },
   "dependencies": {
